# safe_rl_manipulators

./: LICENSE  README.md
src/catkin_ws/src/failsafe_nodelets/control_command_translator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/control_command_translator/config/: parameters_modrob0.yaml  parameters_modrob1.yaml
src/catkin_ws/src/failsafe_nodelets/control_command_translator/launch/: test.launch
src/catkin_ws/src/failsafe_nodelets/control_command_translator/src/: control_command_translator.cc  nodelet.cc
src/catkin_ws/src/failsafe_nodelets/failsafe_consistent_planner/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/failsafe_consistent_planner/config/: parameters.yaml
src/catkin_ws/src/failsafe_nodelets/failsafe_consistent_planner/launch/: launcher.launch  test.launch  test_fail_safe.launch
src/catkin_ws/src/failsafe_nodelets/failsafe_consistent_planner/src/: long_term_traj.cc  motion.cc  nodelet.cc  online_verification.cc  path.cc
src/catkin_ws/src/failsafe_nodelets/failsafe_consistent_planner/tests/: long_term_traj_fixture.h  long_term_traj_tests.cc
src/catkin_ws/src/failsafe_nodelets/human_reach/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/human_reach/config/: config.rviz
src/catkin_ws/src/failsafe_nodelets/human_reach/launch/: test.launch  test_human_work.launch
src/catkin_ws/src/failsafe_nodelets/human_reach/src/: human_reach.cc  nodelet.cc
src/catkin_ws/src/failsafe_nodelets/initialisation/: CMakeLists.txt  package.xml
src/catkin_ws/src/failsafe_nodelets/initialisation/launch/: gazebo.launch  init.launch  init_modrob.launch  init_modrob_unsafe.launch  laser.launch  matlab_curtains.launch  matlab_laser.launch  modrob0_dummy_obs.launch  modrob0_failsafe.launch  modrob0_human_work.launch  profiling_modrob0_human_work.launch  simulation_control_test.launch  start_world.launch  test_step_size_modrob0.launch
src/catkin_ws/src/failsafe_nodelets/initialisation/src/: initialisation.cc
src/catkin_ws/src/failsafe_nodelets/reach_lib/: CMakeLists.txt  package.xml
src/catkin_ws/src/failsafe_nodelets/reach_lib/src/: Articulated.cpp  Articulated_A.cpp  Articulated_P.cpp  Articulated_V.cpp  BodyPart.cpp  BodyPart_A.cpp  BodyPart_V.cpp  Capsule.cpp  Cylinder.cpp  Extremity.cpp  Point.cpp  System.cpp
src/catkin_ws/src/failsafe_nodelets/simulation_time_control/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/simulation_time_control/src/: nodelet.cc  simulation_time_control.cc
src/catkin_ws/src/failsafe_nodelets/util/dummy_obstacle/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/util/fake_safety/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/util/reflexxesTypeIV/: CMakeLists.txt  package.xml
src/catkin_ws/src/failsafe_nodelets/util/rviz_marker/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/verify_iso/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/catkin_ws/src/failsafe_nodelets/verify_iso/config/: sensors_parameters.yaml
src/catkin_ws/src/failsafe_nodelets/verify_iso/launch/: test.launch
src/catkin_ws/src/failsafe_nodelets/verify_iso/src/: advanced_verify_iso.cc  nodelet.cc  verify_iso.cc
src/catkin_ws/src/failsafe_nodelets/verify_iso/tests/: capsule_tests.cc  verify_iso_fixture.h
src/catkin_ws/src/modrob_simulation/modrob_simulation/: CMakeLists.txt  README.md  package.xml
src/catkin_ws/src/modrob_simulation/modrob_simulation/config/: general_config.yaml  modrob0_control.yaml  modrob0_control_tuned.yaml  modrob0_group_position_control.yaml  modrob1_control.yaml  modrob1_control_tuned.yaml  modrob1_group_position_control.yaml  modrob_control.yaml
src/catkin_ws/src/modrob_simulation/modrob_simulation/gazebo/: Demo_Motion_6DOF.bag  motion.txt  room.world  single_modrob.world
src/catkin_ws/src/modrob_simulation/modrob_simulation/includes/: modrob_contact_plugin.hh
src/catkin_ws/src/modrob_simulation/modrob_simulation/launch/: gripper.launch  main_multi.launch  modrob.launch  modrob0_control.launch  modrob1_control.launch  modrob_control.launch  modrob_move.launch  modrob_planning_execution.launch  multiple_gazebo.launch  put_robot_in_world.launch  put_robot_in_world_path_following.launch  single_gazebo.launch  single_sim.launch  start_world.launch  start_world_human.launch  start_world_sphere.launch  start_world_working_env.launch  test_collision_parameters.launch  urdf_and_gazebo.launch
src/catkin_ws/src/modrob_simulation/modrob_simulation/msg/: Collision.msg  Collisions.msg  JointConfigCommanded.msg  JointConfigMeasured.msg  JointDescription.msg  LinkDescription.msg  LinkSensor.msg  LinkVisual.msg  Modes.msg  RobotConfigCommanded.msg  RobotConfigMeasured.msg  RobotDescription.msg  RobotGroupDescription.msg  RobotGroupModuleOrder.msg  RobotModuleOrder.msg
src/catkin_ws/src/modrob_simulation/modrob_simulation/rviz/: urdf.rviz
src/catkin_ws/src/modrob_simulation/modrob_simulation/scripts/: get_controller_names.py  prepare_simulated_robot.py
src/catkin_ws/src/modrob_simulation/modrob_simulation/src/: create_urdf_and_launch_gazebo.cpp  gripper_integration.hpp  modrob_contact_plugin.cc  motion_publisher.cpp  motion_terminal.cpp  republishing.cpp  robotconfigcommanded_to_jointstate_translator.cpp  robotconfigmeasured_to_jointstate_translator.cpp
src/catkin_ws/src/modrob_simulation/modrob_simulation/stl_files/: B_90.STL  E_Schimaneck_Fingers.STL  E_Schimaneck_low_poly.STL  L_180_400_LL_low_poly.STL  L_180_600_LL.STL  (+85 more)
src/catkin_ws/src/modrob_workstation/workstation/: CMakeLists.txt
src/catkin_ws/src/obstacles/: CMakeLists.txt  package.xml
src/catkin_ws/src/obstacles/launch/: test_human_work.launch  test_sphere.launch  test_stick_x.launch
src/catkin_ws/src/obstacles/src/: cv_model.cc  cv_sphere.cc  kf_model.cc  motion_capture.cc  stick.cc
src/catkin_ws/src/obstacles/worlds/: test_human_work.world  test_sphere.world  test_stick_x.world
(+614 files in other folders)
