<?xml version="1.0"?>
<package format="2">
  <name>modrob_simulation</name>
  <version>2.0.0</version>
  <description>Modular Robot Simulation package</description>


  <maintainer email="jakob.thumm@tum.de">ros</maintainer>
  <author>Sven Schepp; Leonard Klüpfel</author>

  <!-- Later small changes for ws20 by-->
  <author>Maximilian Körsten</author>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!--build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend-->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/../src/modrob_simulation/modrob_simulation/models/"/>
    <gazebo_ros gazebo_model_path="${prefix}/../src/obstacles/models/"/>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
