<?xml version="1.0"?>
<package>
  <name>fake_safety</name>
  <version>0.0.0</version>
  <description>Publishes a safety information. Can be used instead of verifyISO.</description>
  <maintainer email="jakob.thumm@tum.de">carencotte</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_robot_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>custom_robot_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
